# dev-cleanup

./: .gitignore  README.md  pyproject.toml
src/dev_cleanup/: __init__.py  __main__.py  cli.py  config.py  models.py  scanner.py
src/dev_cleanup/utils/: __init__.py  display.py  filesystem.py  git.py
tests/: __init__.py
