[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dev-cleanup"
version = "0.1.0"
description = "CLI tool for cleaning up dependencies from stale git repositories"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Michael Riordan"}
]
keywords = ["cli", "cleanup", "node_modules", "venv", "git"]

dependencies = [
    "typer[all]>=0.12.0",
    "rich>=13.7.0",
    "InquirerPy>=0.3.4",
    "python-dateutil>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "ruff>=0.3.0",
]

[project.scripts]
dev-cleanup = "dev_cleanup.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/dev_cleanup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=dev_cleanup --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
